--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<style type="text/css">
+	body{
+		background: url('img/background.png');
+		margin:0 auto;
+		background-position: center;
+	}
+</style>
 <html>
 	<head>
 		<title>hola</title>
