--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <style type="text/css">
 	body{
-		background: url('img/background.png');
+		background: url('img/background.png') no-repeat;
 		margin:0 auto;
 		background-position: center;
 	}
 </style>
 <html>
 	<head>
-		<title>hola</title>
+		<title>Revista Las Glorietas</title>
 	</head>
 <body>
 	<object width="320" height="150">
