--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<title>Revista Las Glorietas</title>
 	</head>
 <body>
-	<object width="320" height="150">
+	<object style="margin:5px" width="320" height="150">
 		<param name="movie" value="http://www.imusicaradios.com/ccfm/ccfmplayer.swf?config=http%3A%2F%2Fwww.imusicaradios.com%2Fccfm%2Fmx%2Fjsonconfig.txt&isembed=1&build=4.8"></param>
 		<param name="allowFullScreen" value="true">
 			<param name="wmode" value="transparent"></param>
