--- a/index.html
+++ b/index.html
@@ -216,12 +216,12 @@ margin-top:430px;
 	<div class="top">
 		<img src="img/icon.png" width="75" />
 	</div>
-	<div style="position:absolute;left:150px;top:10px;">
+	<div style="position:absolute;left:150px;top:5px;">
 		<div class="c8">
 			<kbd class="light" id="one" style="padding:3px 6px;border-radius:3px;font-size:30px;cursor:pointer" onClick="kk()">◄</kbd>
 			<kbd class="light" id="two" style="padding:3px 6px;border-radius:3px;font-size:30px;cursor:pointer" onClick="jj()">►</kbd>
 		</div>
-		<h2 style="display:inline-block; margin-left:35px;font-family:calibri;color:white;text-shadow:1px 1px 1px black">¡Sitio en Mantenimiento, regresa muy pronto!</h2>
+		<h2 style="display:inline-block; margin-left:35px;font-family:calibri;color:white;text-shadow:1px 1px 1px black">¡Sitio en Mantenimiento, regresa muy pronto y encontraras mucho mas contenido!</h2>
 	</div>
 <div class="everything">
 <div class="left">
