--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@ margin-top:430px;
 			<embed src="http://www.imusicaradios.com/ccfm/ccfmplayer.swf?config=http%3A%2F%2Fwww.imusicaradios.com%2Fccfm%2Fmx%2Fjsonconfig.txt&isembed=1&build=4.8" type="application/x-shockwave-flash" width="320" height="150" allowscriptaccess="always" wmode="transparent" allowfullscreen="true"></embed>
 		</object>
 
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-540d4fda55a197ef"></script>
 
 <script type="text/javascript">
 
