--- a/index.html
+++ b/index.html
@@ -230,7 +230,9 @@ margin-top:430px;
 			<kbd class="light" id="one" style="padding:3px 6px;border-radius:3px;font-size:30px;cursor:pointer" onClick="kk()">◄</kbd>
 			<kbd class="light" id="two" style="padding:3px 6px;border-radius:3px;font-size:30px;cursor:pointer" onClick="jj()">►</kbd>
 		</div>
-		<h2 style="display:inline-block; margin-left:35px;font-family:calibri;color:white;text-shadow:1px 1px 1px black">¡Sitio en Mantenimiento, regresa muy pronto y encontraras mucho mas contenido!</h2>
+		<h2 style="display:inline-block; margin-left:35px;font-family:calibri;color:white;text-shadow:1px 1px 1px black">
+		¡Estamos preparando para ti mucho mas contenido!
+		</h2>
 	</div>
 <div class="everything">
 <div class="left">
@@ -250,8 +252,9 @@ margin-top:430px;
 	</div>
 </div>
 </div>
-	<div style="position:absolute;left:0px;bottom:10px;font-family:calibri;background-color:gray;padding:1px;padding-right:15px;border-top-right-radius: .52em;border-bottom-right-radius: .52em; color:white;text-shadow:1px 1px 1px black">
-		<h4 style="margin-left:10px">¿Quieres Anunciarte? <br/><big>Llámanos 3315121240<big></h4>
+	<div style="display:none;position:absolute;left:0px;bottom:10px;font-family:calibri;background-color:gray;padding:1px;padding-right:15px;border-top-right-radius: .52em;border-bottom-right-radius: .52em; color:white;text-shadow:1px 1px 1px black">
+		<h4 style="margin-left:10px">¿Quieres Anunciarte? <br/>
+		<big>Llámanos 3315121240<big></h4>
 	</div>
 		<object style="position:absolute;right:5px;bottom:5px" width="320" height="150">
 			<param name="movie" value="http://www.imusicaradios.com/ccfm/ccfmplayer.swf?config=http%3A%2F%2Fwww.imusicaradios.com%2Fccfm%2Fmx%2Fjsonconfig.txt&isembed=1&build=4.8"></param>
