--- a/index.html
+++ b/index.html
@@ -230,11 +230,11 @@ margin-top:430px;
 			<kbd class="light" id="one" style="padding:3px 6px;border-radius:3px;font-size:30px;cursor:pointer" onClick="kk()">◄</kbd>
 			<kbd class="light" id="two" style="padding:3px 6px;border-radius:3px;font-size:30px;cursor:pointer" onClick="jj()">►</kbd>
 		</div>
-		<center>
-			<h2 style="display:inline-block;font-family:calibri;color:white;text-shadow:1px 1px 1px black">
-				¡Estamos preparando para ti mucho mas contenido!
+		
+			<h2 style="display:inline-block;text-align:center;font-family:calibri;color:white;text-shadow:1px 1px 1px black">
+			¡Estamos preparando para ti mucho mas contenido!
 			</h2>
-		</center>
+		
 	</div>
 <div class="everything">
 <div class="left">
