--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ margin-top:430px;
 		<big>Llámanos 3315121240<big></h4>
 	</div>
 	<div id="cocaRadio" style="position:absolute;right:5px;bottom:5px">
-		<strong  style="margin-top:-35px;position:absolute;text-shadow:0px 0px 3px red;text-align:center;font-family:calibri;">Enciende la Radio</strong>
+		<strong  style="margin-top:-35px;position:absolute;text-shadow:0px 0px 3px #333;text-align:center;font-family:calibri;">Enciende la Radio</strong>
 		<img src="http://png.findicons.com/files/icons/997/vista_style/128/headphones.png" style="margin:10px;" />
 	</div>
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-540d4fda55a197ef"></script>
