--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ margin-top:430px;
 		</div>
 		
 			<h2 style="display:inline-block;text-align:center;font-family:calibri;color:white;text-shadow:1px 1px 1px black">
-			¡Estamos preparando para ti mucho mas contenido!
+			¡Revista digital Las Glorietas!
 			</h2>
 		
 	</div>
@@ -266,9 +266,6 @@ margin-top:430px;
 
 <script type="text/javascript">
 
-	
-	
-		
 
 	$(window).ready(function() {
 	
