--- a/index.html
+++ b/index.html
@@ -239,18 +239,18 @@ margin-top:430px;
 <div class="everything">
 <div class="left">
 	<div id="revistin">
-		<div style="background-image:url(img/pop/01.jpg);"><div class="page-right"></div></div>
-		<div style="background-image:url(img/pop/02.jpg);"><div class="page-left"></div></div>
-		<div style="background-image:url(img/pop/03.jpg);"><div class="page-right"></div></div>
-		<div style="background-image:url(img/pop/04.jpg);"><div class="page-left"></div></div>
-		<div style="background-image:url(img/pop/05.jpg);"><div class="page-right"></div></div>
-		<div style="background-image:url(img/pop/06.jpg);"><div class="page-left"></div></div>
-		<div style="background-image:url(img/pop/07.jpg);"><div class="page-right"></div></div>
-		<div style="background-image:url(img/pop/08.jpg);"><div class="page-left"></div></div>
-		<div style="background-image:url(img/pop/09.jpg);"><div class="page-right"></div></div>
-		<div style="background-image:url(img/pop/10.jpg);"><div class="page-left"></div></div>
-		<div style="background-image:url(img/pop/11.jpg);"><div class="page-right"></div></div>
-		<div style="background-image:url(img/pop/12.jpg);"><div class="page-left"></div></div>
+		<div style="background-image:url(img/pop/01.png);"><div class="page-right"></div></div>
+		<div style="background-image:url(img/pop/02.png);"><div class="page-left"></div></div>
+		<div style="background-image:url(img/pop/03.png);"><div class="page-right"></div></div>
+		<div style="background-image:url(img/pop/04.png);"><div class="page-left"></div></div>
+		<div style="background-image:url(img/pop/05.png);"><div class="page-right"></div></div>
+		<div style="background-image:url(img/pop/06.png);"><div class="page-left"></div></div>
+		<div style="background-image:url(img/pop/07.png);"><div class="page-right"></div></div>
+		<div style="background-image:url(img/pop/08.png);"><div class="page-left"></div></div>
+		<div style="background-image:url(img/pop/09.png);"><div class="page-right"></div></div>
+		<div style="background-image:url(img/pop/10.png);"><div class="page-left"></div></div>
+		<div style="background-image:url(img/pop/11.png);"><div class="page-right"></div></div>
+		<div style="background-image:url(img/pop/12.png);"><div class="page-left"></div></div>
 	</div>
 </div>
 </div>
