--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 #revistin div{
 	background-size:375px 482px;
 	background-position:center;
-	background-color:white
 }
 .fb{ 
 	width:200px;
@@ -240,18 +239,18 @@ margin-top:430px;
 <div class="everything">
 <div class="left">
 	<div id="revistin">
-		<div style="background-image:url(img/pop/01.png);"><div class="page-right"></div></div>
-		<div style="background-image:url(img/pop/02.png);"><div class="page-left"></div></div>
-		<div style="background-image:url(img/pop/03.png);"><div class="page-right"></div></div>
-		<div style="background-image:url(img/pop/04.png);"><div class="page-left"></div></div>
-		<div style="background-image:url(img/pop/05.png);"><div class="page-right"></div></div>
-		<div style="background-image:url(img/pop/06.png);"><div class="page-left"></div></div>
-		<div style="background-image:url(img/pop/07.png);"><div class="page-right"></div></div>
-		<div style="background-image:url(img/pop/08.png);"><div class="page-left"></div></div>
-		<div style="background-image:url(img/pop/09.png);"><div class="page-right"></div></div>
-		<div style="background-image:url(img/pop/10.png);"><div class="page-left"></div></div>
-		<div style="background-image:url(img/pop/11.png);"><div class="page-right"></div></div>
-		<div style="background-image:url(img/pop/12.png);"><div class="page-left"></div></div>
+		<div style="background-image:url(img/pop/01.png);background-color:white"><div class="page-right"></div></div>
+		<div style="background-image:url(img/pop/02.png);background-color:white"><div class="page-left"></div></div>
+		<div style="background-image:url(img/pop/03.png);background-color:white"><div class="page-right"></div></div>
+		<div style="background-image:url(img/pop/04.png);background-color:white"><div class="page-left"></div></div>
+		<div style="background-image:url(img/pop/05.png);background-color:white"><div class="page-right"></div></div>
+		<div style="background-image:url(img/pop/06.png);background-color:white"><div class="page-left"></div></div>
+		<div style="background-image:url(img/pop/07.png);background-color:white"><div class="page-right"></div></div>
+		<div style="background-image:url(img/pop/08.png);background-color:white"><div class="page-left"></div></div>
+		<div style="background-image:url(img/pop/09.png);background-color:white"><div class="page-right"></div></div>
+		<div style="background-image:url(img/pop/10.png);background-color:white"><div class="page-left"></div></div>
+		<div style="background-image:url(img/pop/11.png);background-color:white"><div class="page-right"></div></div>
+		<div style="background-image:url(img/pop/12.png);background-color:white"><div class="page-left"></div></div>
 	</div>
 </div>
 </div>
