--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <style type="text/css">
 	body{
-		background: url('img/background.png') no-repeat;
+		background: url('img/wood.jpg') no-repeat;
+		background-size: cover;
 		margin:0 auto;
 		background-position: center;
 	}
