--- a/mapa.html
+++ b/mapa.html
@@ -1,1 +1,106 @@
-<h2>Mapa</h2>
+<html>
+	<head>
+		<title>Revista Las Glorietas</title>
+		<link rel="icon" href="img/icon.png">
+		<style type="text/css">
+
+		body {
+			margin:0 auto;
+		}
+			#map_canvas {
+				cursor:crosshair;
+				position:absolute;
+				z-index:0;
+				left:0;
+				width:100%;
+				height:100%;
+			}
+			.top {
+				width: 100%;
+				height: 65px;
+				background: gray;
+			}
+		</style>
+		<script type="text/javascript" src="js/jquery-1.9.1.js"></script>
+		<script type="text/javascript" src="//maps.googleapis.com/maps/api/js"></script>
+		<script type="text/javascript">
+
+function initialize(){
+	var map; 
+    var cdg = new google.maps.LatLng(20.679,-103.4468849); 
+    var MY_MAPTYPE_ID = 'custom_style'; 
+    var listaClientes = {};
+
+      var featureOpts = [
+        {
+          stylers: [
+            { hue: '#7a90c0' },
+            { visibility: 'simplified' },
+            { gamma: 0.5 },
+            { weight: 0.5 }
+          ]
+        },
+        {
+          elementType: 'labels',
+          stylers: [
+            { visibility: 'off' }
+          ]
+        },
+        {
+          featureType: 'water',
+          stylers: [
+            { color: '#1E90FF' }
+          ]
+        }
+      ]
+
+
+      var mapOptions = {
+        zoom: 15,
+        center: cdg,
+       scrollwheel: false,
+        navigationControl: false,
+        draggable: false,
+        mapTypeControl: false,
+        scaleControl: false,
+         disableDoubleClickZoom: true,
+         disableDefaultUI: true,
+        mapTypeControlOptions: {
+          mapTypeIds: [google.maps.MapTypeId.ROADMAP, MY_MAPTYPE_ID]
+        },
+        mapTypeId: MY_MAPTYPE_ID
+      }
+
+      map = new google.maps.Map(document.getElementById('map_canvas'), mapOptions);
+/*
+
+    for (var i=0; i < data.length; i++){
+      if(data[i].status){
+        var marker = new google.maps.Marker({
+            position: new google.maps.LatLng(data[i].lat , data[i].lng),
+            map: map,
+            draggable: false,
+            icon : getIcon(data[i].status),
+            title: data[i].place
+        });
+      }
+    }
+*/
+
+    var customMapType = new google.maps.StyledMapType(featureOpts, styledMapOptions);
+      map.mapTypes.set(MY_MAPTYPE_ID, customMapType);
+  
+    var styledMapOptions = {
+        name: 'Custom Style'
+     }
+}
+google.maps.event.addDomListener(window, "load", initialize);
+		</script>
+	</head>
+	<body>
+		<div class="top">
+			<img src="img/icon.png" width="75" />
+		</div>
+		<div id="map_canvas"></div>
+	</body>
+</html>
